[gd_scene load_steps=6 format=3 uid="uid://f48kg2m2jay1"]

[ext_resource type="Texture2D" uid="uid://ccgqhmnt7xyui" path="res://background/N7/_N7-1floor_2.png" id="1_gqne8"]
[ext_resource type="Script" uid="uid://ceaxuseva3w3o" path="res://scenes/1_st_floor_2.gd" id="1_iig33"]
[ext_resource type="AudioStream" uid="uid://bl17882kv7bjh" path="res://sound/bg.mp3" id="3_he01u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8yym"]
size = Vector2(2093.17, 67.9025)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loguq"]
size = Vector2(9.1377, 1194.42)

[node name="1_st_floor_2" type="Node2D"]
script = ExtResource("1_iig33")
metadata/_edit_horizontal_guides_ = [-180.0]
metadata/_edit_vertical_guides_ = [210.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, 0)
texture = ExtResource("1_gqne8")

[node name="CanvasModulate" type="CanvasModulate" parent="Sprite2D"]
visible = false
z_index = 1
color = Color(0.0509804, 0.0509804, 0.0509804, 0.960784)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(-5, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(5.50001, 112.926)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_n8yym")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(217, 0)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_loguq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(-206, -1)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_loguq")

[node name="SpawnFromMap1" type="Marker2D" parent="Sprite2D"]
position = Vector2(-177, 107)
gizmo_extents = 100.1

[node name="SpawnFromMap2" type="Marker2D" parent="Sprite2D"]
position = Vector2(179, 107)
gizmo_extents = 100.1

[node name="btn1" type="Marker2D" parent="."]
z_as_relative = false
position = Vector2(-167, 15)
gizmo_extents = 91.1

[node name="btn2" type="Marker2D" parent="."]
position = Vector2(192, 13)

[node name="E_Label" type="RichTextLabel" parent="."]
offset_left = 498.0
offset_top = -96.0
offset_right = 538.0
offset_bottom = -56.0
text = "E"
metadata/_edit_use_anchors_ = true

[node name="bg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_he01u")
volume_db = -10.0
autoplay = true
parameters/looping = true
